<resources>
    <string name="app_name">LetsWatch</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Sign Up</string>
    <string name="email">Email</string>
    <string name="repeatPass">Repeat Password</string>
    <string name="gotoRegister">Don\'t have an account? Create one now!</string>
    <string name="gotoLogin">Already have an account? Log in!</string>
    <string name="welcomeExplanation">You are not connected to anyone currently. To start using this app you need to connect with another user! To connect generate and send
    your code to other user or insert their code to start!</string>
    <string name="generateCode">Generate Code</string>
    <string name="insertCode">Insert code</string>
    <string name="yourCodeIs">Your generated code is:</string>
    <string name="generatedCodeExplanation">This is your unique generated code!\nShare this with the user you want to connect with</string>
    <string name="title_activity_drawerbar">DrawerbarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="openDrawer">Drawer opened</string>
    <string name="closeDrawer">Drawer closed</string>
    <string name="pleaseEnterCode">Please enter the code of the user you want to connect with</string>
    <string name="connect">Connect</string>
    <string name="code">Code</string>
    <string name="startSwiping">Start discovering</string>
    <string name="releasedIn">Release date:</string>
    <string name="genres">Genres:</string>
    <string name="rating">Rating:</string>
    <string name="description">Description:</string>
    <string name="watchedIt">Watched it</string>
    <string name="watchedItTogether">Watched it together</string>
    <string name="youBothLiked">You both liked these movies, so go and watch them</string>
    <string name="youBothWatched">You watched this movies together</string>
    <string name="youSoloWatch">You watched this movies by yourself</string>
    <string name="suggestedMovies">Movies suggested:</string>
    <string name="likedMovies">Movies liked:</string>
    <string name="bothLikedMovies">Movies liked by both:</string>
    <string name="watchTogetherInfoText">Why don\'t you watch this together</string>
    <string name="lastWatchedTogetherMovie">Last movie watched together:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>