<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="movieData" type="com.example.letswatch.MovieData"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SwipeSuggestionActivity"
    android:id="@+id/currentFragmentView">

    <ImageView
        android:id="@+id/imageCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />



    <TextView
        android:id="@+id/movieTitleText"
        style="@style/text"
        android:layout_width="wrap_content"
        android:background="@color/dark"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@{movieData.title}"
        android:textSize="20dp"
        android:textStyle="bold"
        android:shadowColor="@color/dark"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        app:layout_constraintBottom_toBottomOf="@+id/imageCover"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/releasedInPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/releasedIn"
        style="@style/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCover" />

    <TextView
        android:id="@+id/releasedInText"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:text="@{movieData.releaseDate}"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/releasedInPrompt"
        app:layout_constraintTop_toBottomOf="@+id/imageCover" />

    <TextView
        android:id="@+id/grenresPrompt"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/genres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releasedInPrompt" />

    <TextView
        android:id="@+id/grenresText"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@{movieData.genres}"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/grenresPrompt"
        app:layout_constraintTop_toBottomOf="@+id/releasedInPrompt" />

    <TextView
        android:id="@+id/ratingPrompt"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grenresPrompt" />

    <TextView
        android:id="@+id/ratingText"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@{movieData.rating}"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ratingPrompt"
        app:layout_constraintTop_toBottomOf="@+id/grenresPrompt" />

    <TextView
        android:id="@+id/descriptionPrompt"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingPrompt" />

    <TextView
        android:id="@+id/descriptionText"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:scrollbars="vertical"
        android:maxLines="7"
        android:text="@{movieData.description}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionPrompt" />

    <ImageButton
        android:id="@+id/deniedMovieButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@drawable/buttoncirclered"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_close"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <android.widget.Button
        android:id="@+id/watchedMovieButton"
        style="@style/text"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@drawable/buttonshapeyellow"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:text="@string/watchedIt"
        android:textSize="17dp"
        android:textStyle="bold"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/acceptedMovieButton"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/deniedMovieButton" />

    <ImageButton
        android:id="@+id/acceptedMovieButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@drawable/buttoncirclegreen"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_check"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>